update release notes
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1377005 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -13,6 +13,7 @@ Bug fixes and minor enhancements
 Changes in this version include:
 
 New features:
+o LOG4J2-70:  Add getLogger(Class) to LogManager. 
 o LOG4J2-69:  Allow Flume agents to be embedded into the Flume Appender. 
 o LOG4J2-68:  Add support for formatting using String.format(). 
 o LOG4J2-67:  Allow components besides core to create a PluginMap for faster plugin loading and not
