Update release notes and release date
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1407355 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,9 +1,9 @@
 
-              Apache Log4j 2.0-beta2 RELEASE NOTES
+              Apache Log4j 2.0-beta3 RELEASE NOTES
 
-The Apache Log4j 2 team is pleased to announce the Log4j 2.0-beta2 release!
+The Apache Log4j 2 team is pleased to announce the Log4j 2.0-beta3 release!
 
-Apache Log4j 2.0-beta2 requires a minimum of Java 5 to build and run. Basic compatibility with
+Apache Log4j 2.0-beta3 requires a minimum of Java 5 to build and run. Basic compatibility with
 Log4j 1.x is provided through the log4j12-api component, however it does not implement some of the
 very implementation specific classes and methods. The package names and Maven groupId have been changed to
 org.apache.logging.log4j to avoid any conflicts with log4j 1.x.
@@ -13,37 +13,33 @@ Bug fixes and enhancements
 Changes in this version include:
 
 New features:
-o LOG4J2-35:  Add interval and modulate options to TimeBasedTriggeringPolicy to allow more fine-grained control of
-        when file rolling should occur. 
-o LOG4J2-58:  Add support for filtering packages from stack traces. 
-o LOG4J2-84:  If system property "disableThreadContextStack" is set pushes to the ThreadContext will be ignored. If
-        system property "disableThreadContext" is set both puts and pushes will be ignored. 
-o LOG4J2-83:  If system property "disableThreadContextMap" is set puts to the ThreadContext will be ignored. If
-        system property "disableThreadContext" is set both puts and pushes will be ignored. 
-o Add support for ANSI colors by adding the highlight and style pattern converters. Fix pattern
-        parsing to allow nested patterns. 
-o Allow the status logging to be directed to stderr or to a file. 
-o Add getFormats to MultiformatMessage and allow StructuredDataMessage to format as XML. 
+o LOG4J2-28:  Added PropertiesRewritePolicy and ability to define properties on a Logger. 
+o LOG4J2-55:  Added ability to configure from an InputSource. 
 
 Fixed Bugs:
-o DefaultConfiguration was not starting the Console Appender. 
-o LOG4J2-92:  Converted DynamicThresholdFilter to use KeyValuePair. Fixed bugs in the Map-based filters
-        to allow declaration of multiple values for a key to match the documentation. 
-o LOG4J2-88:  Many logging methods in AbstractLogger were set to an incorrect logging level. catching was
-        using the THROWING marker and was set to debug instead of error. 
-o LOG4J2-91:  Log4j 1.2 adapter's Category class was missing 3 log methods. 
-o LOG4J2-84:  If the ThreadContext stack is empty the LogEvent will contain a null value to reduce the overhead of
-        creating log events and in the size of the serialized object. Changed the ThreadContext stack to use
-        a custom stack interface instead of java.util.Stack as that class is overly heavy. This change will
-        cause an API incompatibility. 
-o LOG4J2-83:  If the ThreadContext map is empty the LogEvent will contain a null value to reduce the overhead of creating
-        log events and in the size of the serialized object. 
-o LOG4J2-90:  Add documentation on client vs server mode to performance page. 
-o Move variable substitution from PatternLayout to appropriate converters to improve performance. 
+o LOG4J2-108:  Fix NullPointerException in ClassLoaderContextSelector when no class is returned from
+        the SecurityManager. 
+o LOG4J2-107:  PatternParser was not properly handling adjacent nested options 
+o LOG4J2-95:  Add support for loading plugins inside the OSGi bundle. 
+o LOG4J2-103:  The LogEvent was wrapping a ThrowableProxy with another ThrowableProxy when deserializing. Thanks to Das Archive. 
+o LOG4J2-104:  Convert LogManager binding to use "regular" java properties instead of XML properties to workaround a
+        bug in Oracle's xmlparserv2 jar. 
+o LOG4J2-102:  The Facility value was being improperly calculated. Thanks to Emanuele Colombo. 
+o LOG4J2-101:  A NullPointerException would occur if no format value was passed to the SyslogAppender. Thanks to Emanuele Colombo. 
+o LOG4J2-99:  MapRewritePolicy had an extra call to putAll that caused updates to behave like adds. Thanks to Das Archive. 
+o Avoid NPE when duplicate LoggerContextFactorys are present. Allow factories to specify a weight to allow
+        real implementations to outrank test implementations. Provide a simple default LoggerContextFactory. 
+o LOG4J2-97:  Added several missing classes and methods for Log4j 1.x compatibility. 
+o LOG4J2-94:  Interpolator was not stripping Lookup key separator when trying to locate the default value for a variable. Thanks to Denis Treskunov. 
+o Log4j 1.2 Category.forcedLog was wrapping the message with an ObjectMessage even if the parameter was an
+        ObjectMessage. 
 
 Changes:
-o Made ParameterizedMessage, StringFormattedMessage and ThreadDumpMessage immutable. LocalizedMessage is
-        immutable except that it will be updated with the logger name when it is added to the LogEvent. 
+o LOG4J2-105:  Add ability to customize the names of the Levels in the LevelPatternConverter. 
+o LOG4J2-85:  Add ThreadContext.push(String format, Object... args) 
+o Created combined jar to combine API and Core contents for users who only want the Log4j implementation. 
+o LOG4J2-87:  Build pdf of user's guide. 
+o LOG4J2-29:  Added font and fontSize parameters to HTMLLayout. Replace newlines in message with br tag. 
 
 
 For complete information on Apache Log4j 2, including instructions on how to submit bug reports,
